Fix image source path for PhonePe QR code

--- a/payment.html
+++ b/payment.html
@@ -81,7 +81,7 @@
             <div class="booking-card text-center">
                 <h6 class="mb-2">Scan & Pay (Demo)</h6>
                 <img
-                    src="images/phonepe-qr.png"
+                    src="phonepe-qr.png"
                     alt="Scan to pay"
                     class="img-fluid rounded-3 mb-3"
                     style="max-width:260px;border:1px solid rgba(148,163,184,0.7);padding:6px;background:#020617;"
