Update customer support contact information

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <footer class="py-3 mt-4">
     <div class="container d-flex justify-content-between small flex-column flex-md-row gap-2">
         <span>© 2024 DriveNow Rentals. All rights reserved.</span>
-        <span>Customer support: support@drivenowrentals.com • +91-98765 43210</span>
+        <span>Customer support: ravirajavaghade508@gmail.com • +91-8459867542 ||Developed by :-Raviraj</span>
     </div>
 </footer>
 
